# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "checkpatch")
load("//private/devices/google/common/kleaf:device_build.bzl", "device_build")
load("//private/devices/google/zumapro:constants.bzl", "ZUMAPRO_DPM_DTBOS", "ZUMAPRO_DTBS", "ZUMAPRO_MODULE_OUTS")
load(":constants.bzl", "TEGU_DTBOS")

checkpatch(
    name = "checkpatch",
    checkpatch_pl = "//common:scripts/checkpatch.pl",
)

device_build(
    name = "tegu",
    base_device = "//private/devices/google/zumapro:zumapro_base",
    build_configs = ["build.config.tegu"],
    build_dtb = True,
    build_dtbo = True,
    build_system_dlkm = True,
    build_vendor_dlkm = True,
    build_vendor_kernel_boot = True,
    defconfig_fragments = ["tegu_defconfig"],
    dtb_outs = ZUMAPRO_DTBS,
    dtbo_additional_outs = ZUMAPRO_DPM_DTBOS,
    dtbo_outs = TEGU_DTBOS,
    dts_makefile = "dts/Makefile",
    dts_srcs = glob(["dts/**"]) + [
        "//private/google-modules/soc/gs:gs.dt-bindings",
    ],
    ext_modules = [
        # keep sorted
        "//private/google-modules/amplifiers/cs40l26",
        "//private/google-modules/amplifiers/tas25xx",
        "//private/google-modules/bluetooth/broadcom:bluetooth.broadcom",
        "//private/google-modules/display/common/panels:panel-gs-simple",
        "//private/google-modules/display/panels/tegu:panel-gs-tg4a",
        "//private/google-modules/display/panels/tegu:panel-gs-tg4b",
        "//private/google-modules/display/panels/tegu:panel-gs-tg4c",
        "//private/google-modules/gps/broadcom/bcm47765",
        "//private/google-modules/nfc",
        "//private/google-modules/radio/samsung/s5300:cpif",
        "//private/google-modules/touch/common:touch.common",
        "//private/google-modules/touch/synaptics/syna_gtd:syna_touch",
        "//private/google-modules/wlan/bcmdhd/bcm4383:bcmdhd4383",
        "//private/google-modules/wlan/wlan_ptracker",
    ],
    insmod_cfgs = glob(["insmod_cfg/*.cfg"]),
    kconfig_exts = ["Kconfig.ext.tegu"],
    kconfigs = [
        # keep sorted
        "//private/google-modules/display/common:common.kconfig",
        "//private/google-modules/radio/samsung/s5300:cpif.kconfig",
        "//private/google-modules/touch/common:touch.common.kconfig",
    ],
    module_outs = ZUMAPRO_MODULE_OUTS,
    vendor_dlkm_modules_blocklists = ["vendor_dlkm.blocklist.tegu"],
    vendor_ramdisk_modules_lists = ["vendor_ramdisk.modules.tegu"],
)

# For compatibility
alias(
    name = "zumapro_tegu_dist",
    actual = ":tegu/dist",
)

alias(
    name = "zumapro_tegu_abi_update_symbol_list",
    actual = ":tegu/kernel_abi_update_symbol_list",
)

alias(
    name = "kernel",
    actual = ":tegu/kernel",
)

alias(
    name = "kernel_abi_update_symbol_list",
    actual = ":tegu/kernel_abi_update_symbol_list",
)

alias(
    name = "kernel_compile_commands",
    actual = ":tegu/kernel_compile_commands",
)
