# SPDX-License-Identifier: GPL-2.0-only

load("//build/kernel/kleaf:kernel.bzl", "checkpatch", "kernel_module")
load("//private/devices/google/common/kleaf:device_build.bzl", "device_build")
load(":constants.bzl", "ZUMA_DPM_DTBOS", "ZUMA_DTBS", "ZUMA_MODULE_OUTS")

package(
    default_visibility = [
        "//private/devices/google:__subpackages__",
    ],
)

checkpatch(
    name = "checkpatch",
    checkpatch_pl = "//common:scripts/checkpatch.pl",
)

kernel_module(
    name = "zuma_soc",
    srcs = [
        "//private/google-modules/perf:headers",
        "//private/google-modules/soc/gs:gs_soc_sources",
        "//private/google-modules/trusty:headers",
    ],
    outs = [
        # keep sorted
        "drivers/bts/bts.ko",
        "drivers/clk/gs/clk_exynos_gs.ko",
        "drivers/clocksource/exynos_mct_v3.ko",
        "drivers/cpufreq/exynos-acme.ko",
        "drivers/devfreq/google/exynos_devfreq.ko",
        "drivers/dma-buf/heaps/samsung/samsung_dma_heap.ko",
        "drivers/dma/pl330.ko",
        "drivers/dma/samsung-dma.ko",
        "drivers/gpu/exynos/g2d/g2d.ko",
        "drivers/i2c/busses/i2c-acpm.ko",
        "drivers/i2c/busses/i2c-exynos5.ko",
        "drivers/iio/power/odpm.ko",
        "drivers/input/fingerprint/goodixfp.ko",
        "drivers/input/keyboard/s2mpg14-key.ko",
        "drivers/input/keycombo.ko",
        "drivers/input/keydebug.ko",
        "drivers/input/misc/vl53l1/stmvl53l1.ko",
        "drivers/iommu/exynos-pcie-iommu.ko",
        "drivers/iommu/iovad-vendor-hooks.ko",
        "drivers/iommu/samsung-iommu-group.ko",
        "drivers/iommu/samsung-secure-iova.ko",
        "drivers/iommu/samsung_iommu_v9.ko",
        "drivers/media/platform/exynos/mfc/exynos_mfc.ko",
        "drivers/media/platform/exynos/smfc/smfc.ko",
        "drivers/mfd/s2mpg14-mfd.ko",
        "drivers/mfd/s2mpg1415-gpio.ko",
        "drivers/mfd/s2mpg15-mfd.ko",
        "drivers/mfd/slg51002-core.ko",
        "drivers/misc/sbb-mux/sbb-mux.ko",
        "drivers/misc/sscoredump/sscoredump.ko",
        "drivers/pci/controller/dwc/pcie-exynos-gs.ko",
        "drivers/pci/controller/dwc/pcie-exynos-zuma-rc-cal.ko",
        "drivers/performance/gs_perf_mon/gs_perf_mon.ko",
        "drivers/performance/lat_governors/gs_governor_dsulat.ko",
        "drivers/performance/lat_governors/gs_governor_memlat.ko",
        "drivers/performance/lat_governors/gs_governor_utils.ko",
        "drivers/phy/samsung/eusb_repeater.ko",
        "drivers/phy/samsung/phy-exynos-mipi.ko",
        "drivers/phy/samsung/phy-exynos-mipi-dsim.ko",
        "drivers/phy/samsung/phy-exynos-usbdrd-eusb-super.ko",
        "drivers/pinctrl/gs/pinctrl-exynos-gs.ko",
        "drivers/pinctrl/pinctrl-slg51002.ko",
        "drivers/power/reset/debug-reboot.ko",
        "drivers/regulator/pmic_class.ko",
        "drivers/regulator/rt6160-regulator.ko",
        "drivers/regulator/s2mpg14-powermeter.ko",
        "drivers/regulator/s2mpg14-regulator.ko",
        "drivers/regulator/s2mpg15-powermeter.ko",
        "drivers/regulator/s2mpg15-regulator.ko",
        "drivers/regulator/slg51002-regulator.ko",
        "drivers/rtc/rtc-s2mpg14.ko",
        "drivers/soc/google/acpm/acpm_flexpmu_dbg.ko",
        "drivers/soc/google/acpm/acpm_mbox_test.ko",
        "drivers/soc/google/acpm/gs_acpm.ko",
        "drivers/soc/google/acpm/power_stats.ko",
        "drivers/soc/google/bcm_dbg.ko",
        "drivers/soc/google/cal-if/cmupmucal.ko",
        "drivers/soc/google/dbgcore-dump.ko",
        "drivers/soc/google/debug/bookerci.ko",
        "drivers/soc/google/debug/debug-snapshot-debug-kinfo.ko",
        "drivers/soc/google/debug/dss.ko",
        "drivers/soc/google/debug/ehld.ko",
        "drivers/soc/google/debug/etm2dram.ko",
        "drivers/soc/google/debug/exynos-adv-tracer.ko",
        "drivers/soc/google/debug/exynos-adv-tracer-s2d.ko",
        "drivers/soc/google/debug/exynos-coresight.ko",
        "drivers/soc/google/debug/exynos-coresight-etm.ko",
        "drivers/soc/google/debug/exynos-debug-test.ko",
        "drivers/soc/google/debug/exynos-ecc-handler.ko",
        "drivers/soc/google/debug/itmon.ko",
        "drivers/soc/google/debug/pixel-boot-metrics.ko",
        "drivers/soc/google/debug/pixel-debug-test.ko",
        "drivers/soc/google/debug/pixel-suspend-diag.ko",
        "drivers/soc/google/debug/sjtag-driver.ko",
        "drivers/soc/google/ect_parser.ko",
        "drivers/soc/google/exynos-bcm_dbg-dump.ko",
        "drivers/soc/google/exynos-cpuhp.ko",
        "drivers/soc/google/exynos-cpupm.ko",
        "drivers/soc/google/exynos-dm.ko",
        "drivers/soc/google/exynos-pd.ko",
        "drivers/soc/google/exynos-pd-dbg.ko",
        "drivers/soc/google/exynos-pd_el3.ko",
        "drivers/soc/google/exynos-pd_hsi0.ko",
        "drivers/soc/google/exynos-pm.ko",
        "drivers/soc/google/exynos-pmu-if.ko",
        "drivers/soc/google/exynos_pm_qos.ko",
        "drivers/soc/google/gcma/gcma.ko",
        "drivers/soc/google/gnssif_spi/gnss_spi.ko",
        "drivers/soc/google/gnssif_spi/gnssif.ko",
        "drivers/soc/google/gs-chipid.ko",
        "drivers/soc/google/hardlockup-debug.ko",
        "drivers/soc/google/hardlockup-watchdog.ko",
        "drivers/soc/google/kernel-top.ko",
        "drivers/soc/google/modemctl/google_modemctl.ko",
        "drivers/soc/google/perf_trace_counters.ko",
        "drivers/soc/google/pixel_stat/mm/pixel_stat_mm.ko",
        "drivers/soc/google/pixel_stat/pixel_stat_sysfs.ko",
        "drivers/soc/google/pkvm-s2mpu/pkvm-s2mpu-v9/pkvm-s2mpu-v9.ko",
        "drivers/soc/google/pt/slc_acpm.ko",
        "drivers/soc/google/pt/slc_dummy.ko",
        "drivers/soc/google/pt/slc_pmon.ko",
        "drivers/soc/google/pt/slc_pt.ko",
        "drivers/soc/google/smra/smra.ko",
        "drivers/soc/google/vh/kernel/cgroup/vh_cgroup.ko",
        "drivers/soc/google/vh/kernel/fs/vh_fs.ko",
        "drivers/soc/google/vh/kernel/metrics/pixel_metrics.ko",
        "drivers/soc/google/vh/kernel/mm/vh_mm.ko",
        "drivers/soc/google/vh/kernel/pixel_em/pixel_em.ko",
        "drivers/soc/google/vh/kernel/sched/sched_tp.ko",
        "drivers/soc/google/vh/kernel/sched/vh_preemptirq_long.ko",
        "drivers/soc/google/vh/kernel/sched/vh_sched.ko",
        "drivers/soc/google/vh/kernel/systrace.ko",
        "drivers/soc/google/vh/kernel/thermal/vh_thermal.ko",
        "drivers/spi/spi-s3c64xx.ko",
        "drivers/spmi/spmi_bit_bang.ko",
        "drivers/thermal/google/s2mpg15_spmic_thermal.ko",
        "drivers/thermal/samsung/gpu_cooling.ko",
        "drivers/thermal/samsung/gs_thermal.ko",
        "drivers/tty/serial/exynos_tty.ko",
        "drivers/ufs/ufs-exynos-gs.ko",
        "drivers/ufs/ufs-pixel-fips140.ko",
        "drivers/usb/dwc3/dwc3-exynos-usb.ko",
        "drivers/usb/dwc3/google-role-sw.ko",
        "drivers/usb/gadget/function/usb_f_dm.ko",
        "drivers/usb/gadget/function/usb_f_dm1.ko",
        "drivers/usb/gadget/function/usb_f_etr_miu.ko",
        "drivers/usb/host/xhci-exynos.ko",
        "drivers/usb/host/xhci-goog-dma.ko",
        "drivers/usb/typec/tcpm/google/bc_max77759.ko",
        "drivers/usb/typec/tcpm/google/google_tcpci_shim.ko",
        "drivers/usb/typec/tcpm/google/max77759_contaminant.ko",
        "drivers/usb/typec/tcpm/google/max77759_helper.ko",
        "drivers/usb/typec/tcpm/google/max77779_contaminant.ko",
        "drivers/usb/typec/tcpm/google/max777x9_contaminant.ko",
        "drivers/usb/typec/tcpm/google/tcpci_max77759.ko",
        "drivers/usb/typec/tcpm/google/tcpci_max777x9_i2c.ko",
        "drivers/usb/typec/tcpm/google/usb_psy.ko",
        "drivers/usb/typec/tcpm/google/usbc_cooling_dev.ko",
        "drivers/watchdog/s3c2410_wdt.ko",
    ],
    kernel_build = "//private/devices/google/common:kernel",
    makefile = ["//private/google-modules/soc/gs:Makefile"],
    visibility = [
        # keep sorted
        "//private/devices/google:__subpackages__",
        "//private/google-modules:__subpackages__",
    ],
    deps = [
        "//private/google-modules/bms/misc:bms-misc",
        "//private/google-modules/soc/gs/drivers/soc/google/gsa",
        "//private/google-modules/trusty",
    ],
)

device_build(
    name = "zuma_base",
    build_configs = ["build.config.zuma"],
    ddk_uapi_headers = [
        # keep sorted
        "//private/google-modules/aoc/alsa:uapi_headers",
        "//private/google-modules/display/samsung:uapi_headers",
        "//private/google-modules/soc/gs:exynos_uapi_headers",
        "//private/google-modules/soc/gs:misc_uapi_headers",
        "//private/google-modules/touch/common:uapi_headers",
        "//private/google-modules/video/gchips:uapi_headers",
    ],
    defconfig_fragments = ["zuma_defconfig"],
    ext_modules = [
        # keep sorted
        ":zuma_soc",
        "//private/google-modules/amplifiers/audiometrics",
        "//private/google-modules/aoc",
        "//private/google-modules/aoc/alsa",
        "//private/google-modules/aoc/usb:aoc.usb",
        "//private/google-modules/bms",
        "//private/google-modules/bms/misc:bms-misc",
        "//private/google-modules/display/common/gs_drm",
        "//private/google-modules/display/common/gs_panel",
        "//private/google-modules/display/samsung:display.samsung",
        "//private/google-modules/display/samsung:exynos-drm-audio",
        "//private/google-modules/edgetpu/rio/drivers/edgetpu:edgetpu.rio",
        "//private/google-modules/fingerprint/goodix/fps_touch_handler",
        "//private/google-modules/gpu/mali_kbase",
        "//private/google-modules/gpu/mali_pixel",
        "//private/google-modules/gxp/zuma:gxp",
        "//private/google-modules/hdcp/samsung:hdcp.samsung",
        "//private/google-modules/lwis:lwis.casablanca",
        "//private/google-modules/misc/sscoredump",
        "//private/google-modules/power/mitigation:bcl",
        "//private/google-modules/power/reset",
        "//private/google-modules/soc/gs/drivers/block/zram:zcomp_cpu",
        "//private/google-modules/soc/gs/drivers/block/zram:zcomp_eh",
        "//private/google-modules/soc/gs/drivers/block/zram:zram_gs",
        "//private/google-modules/soc/gs/drivers/misc/s5910",
        "//private/google-modules/soc/gs/drivers/soc/google/eh",
        "//private/google-modules/soc/gs/drivers/soc/google/gsa",
        "//private/google-modules/trusty",
        "//private/google-modules/video/gchips:video.gchips",
    ],
    kconfig_exts = ["Kconfig.ext.zuma"],
    kconfigs = [
        # keep sorted
        "//private/google-modules/aoc:aoc.kconfig",
        "//private/google-modules/aoc/alsa:alsa.kconfig",
        "//private/google-modules/aoc/usb:aoc.usb.kconfig",
        "//private/google-modules/bms/misc:bms-misc.kconfig",
        "//private/google-modules/display/common:common.kconfig",
        "//private/google-modules/display/samsung:display.samsung.kconfig",
        "//private/google-modules/fingerprint/goodix/fps_touch_handler:fps_touch_handler.kconfig",
        "//private/google-modules/power/mitigation:bcl.kconfig",
        "//private/google-modules/power/reset:reset.kconfig",
        "//private/google-modules/soc/gs:gs_soc.kconfig",
        "//private/google-modules/soc/gs/drivers/misc/s5910:s5910.kconfig",
        "//private/google-modules/soc/gs/drivers/soc/google/gsa:gsa.kconfig",
        "//private/google-modules/trusty:trusty.kconfig",
    ],
    vendor_dlkm_modules_blocklists = ["vendor_dlkm.blocklist.zuma"],
    vendor_ramdisk_modules_lists = ["vendor_ramdisk.modules.zuma"],
)

device_build(
    name = "zuma",
    base_device = ":zuma_base",
    build_dtb = True,
    build_dtbo = True,
    build_system_dlkm = True,
    build_vendor_dlkm = True,
    build_vendor_kernel_boot = True,
    dtb_outs = ZUMA_DTBS,
    dtbo_additional_outs = ZUMA_DPM_DTBOS,
    dts_makefile = "dts/Makefile",
    dts_srcs = glob(["dts/**"]) + [
        "//private/google-modules/soc/gs:gs.dt-bindings",
    ],
    module_outs = ZUMA_MODULE_OUTS,
)

# For compatibility
alias(
    name = "dist",
    actual = ":zuma/dist",
)

alias(
    name = "kernel_compile_commands",
    actual = ":zuma/kernel_compile_commands",
)
